<resources>
    <string name="app_name">Judo</string>

    <string name="sections">Union Sections</string>
    <string name="mangment">Managements</string>
    <string name="trainers">Trainers</string>
    <string name="referee">Referees</string>

    <string name="players">Players</string>
    <string name="courses">Courses</string>
    <string name="course_date_start">Course Start Date</string>
    <string name="course_age">Age</string>
    <string name="course_cost">Cost</string>
    <string name="course_duration">Duration</string>
    <string name="comptetion_place">Competition Place </string>
    <string name="connect_us">Connect Us</string>
    <string name="connect_us_from">You can connect with Us by our official account </string>
    <string name="or_">Or By </string>
    <string name="call">Call</string>
    <string name="know_union">Know The Union</string>
    <string name="our_motto">Our logo</string>

    <string name="union_mangment">Union founders</string>

    <string name="mor">More</string>
    <string name="new_"> New </string>
    <string name="about_us">About Union</string>
    <string name="union_history">Union History</string>
    <string name="union_achievements">Union Achievements</string>
    <string name="what_distinguishes_the_union">What distinguishes the Union</string>
    <string name="what_is_our_message">What is our message?</string>
    <string name="what_is_our_target">What is our target?</string>
    <string name="Thanks_and_appreciation">Thanks and appreciation</string>
    <string name="c_mohamed_bin_alla_el_kabeer">C.Mohamed bin Alla El-kabeer</string>
    <string name="saudi_coach_for_judo">Saudi coach for judo</string>
    <string name="for_all_contribute">For everyone who contributed to the development and construction of the union</string>
    <string name="union_founders">Union founders</string>
    <string name="union_message">Union message</string>
    <string name="union_target">Union target</string>
    <string name="send_to_us">Send to us</string>
    <string name="send_us_a_message_in_any_time">Send us a message in any time</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="write_message">Write message</string>
    <string name="send_message">send message</string>
    <string name="our_adrress">Our address</string>
    <string name="adrress_detail">Prince Faisal Bin Fahd Bin Abdulaziz Road, Al-Rafiah, Riyadh 12752, Saudi Arabia</string>
    <string name="contact_with_us">Contact with us</string>
    <string name="go_to_location_on_the_map">Go to location on the map</string>
    <string name="our_accounts">Our accounts</string>
    <string name="call_us">Call us</string>
    <string name="calling">Calling</string>
    <string name="first">First</string>
    <string name="player_mohamed_mahmoud">Player: Mohamed Mahmoud</string>
    <string name="the_second">The second</string>
    <string name="the_third">The third</string>
    <string name="awards">ِAwards</string>
    <string name="award_details">Award details</string>
    <string name="date">date</string>
    <string name="age">Age</string>
    <string name="the_place_of_the_tournament">The place of the tournament</string>
    <string name="address">address</string>
    <string name="other_details">Other details</string>
    <string name="contact_us_by">Contact us by our official accounts</string>
    <string name="or">Or by</string>
    <string name="gudo_union">Judo Saudi Union</string>
    <string name="Hom">Home</string>
    <string name="win">Championships</string>
    <string name="videos">Videos</string>
    <string name="last_championships">The last Championships</string>
    <string name="new_courses">The new courses</string>
    <string name="our_target_msg">Kingdom Championship for clubs, authorities and universities for the first degree in Mecca and the surprise of Safan</string>
    <string name="test_titel_comp">The thirteenth educational elite championship</string>
    <string name="official">Official</string>
    <string name="test_titel_course">Great Kingdom Judo Education Course for Youth</string>
    <string name="test_desc">Kingdom Championship for clubs, authorities and universities for the first degree in Mecca and the surprise of Safan Saafan Kingdom Championship for clubs, bodies and universities for the first degree in Mecca and surprise Suraan Kingdom Championship for clubs and bodies and universities for the first degree in Makkah and surprise surprise Safto Kingdom of clubs, bodies and universities for the first degree in Mecca and the surprise of Saafan Kingdom of clubs, bodies and universities for the first degree in Mecca and the surprise of Safan Kingdom of clubs and clubs and bodies and universities for the first degree in Makkah and the surprise of Saudi Arabia The championship of clubs and bodies and universities for the first class in Mecca and the surprise of Saafan</string>
    <string name="last_news">Last news</string>
    <string name="union_section">Union Section</string>
    <string name="section">Sections</string>
    <string name="about_app">About The App</string>
    <string name="msg_app">The Saudi Judo Federation application is the official application for judo sport in Saudi Arabia, providing the user with all information about the federation and new news
As well as tournaments, tournaments and other advantages</string>
    <string name="our_moto">Our motto is to make heroes from young to old</string>
    <string name="help_us_withe">Help us with your suggestion to continue developing</string>
    <string name="hint_write_msg">Write your message or suggestion here</string>
    <string name="send_now">Send now</string>
    <string name="share_the_app">Share the app</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="rescent">The most recent</string>
    <string name="informations">Info</string>
    <string name="photos">Photos</string>
    <string name="rank">Ranks</string>
    <string name="mangers">Mangers</string>
    <string name="press_again">Press back again to exit</string>
    <string name="languge">Language :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_the_language">Choose the Language</string>
    <string name="arabic_language">Arabic</string>
    <string name="english_language">English</string>
    <string name="submit">Submit</string>


</resources>