<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.language.LanguageFragment">


        <ImageView
            android:id="@+id/cancel_language"
            android:layout_margin="@dimen/_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_black"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_choose_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:lineSpacingExtra="17sp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/arabic_semi_bold"
                android:text="@string/choose_the_language"
                />


            <Button
                android:id="@+id/arabic_language"
                android:fontFamily="@font/arabic_medium"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/white"
                android:text="@string/arabic_language"
                android:background="@drawable/shape_green_rectangle"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_24"
                android:layout_below="@+id/tv_choose_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button

                android:id="@+id/english_language"
                android:fontFamily="@font/arabic_medium"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/gray"
                android:text="@string/english_language"
                android:background="@drawable/shape_english_rectangle"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_24"
                android:layout_below="@+id/arabic_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>



        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/doit"
            android:fontFamily="@font/arabic_medium"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:background="@drawable/shape_green_rectangle"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_24"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_16dp"
            android:layout_height="wrap_content"/>



    </RelativeLayout>
</layout>
